err/shelley.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Shelley-0.0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyproj'...
Listing './lib/python3.5/site-packages/pyproj/data'...
Listing './lib/python3.5/site-packages/pyproj-1.9.5.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/shelley'...
Compiling './lib/python3.5/site-packages/shelley/__init__.py'...
***   File "./lib/python3.5/site-packages/shelley/__init__.py", line 101
    except RuntimeError, e:
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/shelley/apps'...
Listing './lib/python3.5/site-packages/shelley/apps/web'...
Listing './lib/python3.5/site-packages/shelley/datasources'...
Compiling './lib/python3.5/site-packages/shelley/debug.py'...
***   File "./lib/python3.5/site-packages/shelley/debug.py", line 7
    print "calling %s with args %s, %s" % (f.__name__, args, kw)
                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/shelley/mappers'...
Listing './lib/python3.5/site-packages/shelley/mappers/mapnik'...
Listing './lib/python3.5/site-packages/shelley/renderers'...
Compiling './lib/python3.5/site-packages/shelley/utils.py'...
***   File "./lib/python3.5/site-packages/shelley/utils.py", line 151
    print template
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './share'...
Listing './share/python-wheels'...
